// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots Check create lobby 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    New Lobby
  </h1>
  <div
    className="sc-gsTCUz hIfhYJ"
  >
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        autoFocus={true}
        className="sc-hKgILt form-control false"
        name="lobbyName"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <label>
        Lobby Name
      </label>
    </div>
  </div>
  <div
    className="sc-gsTCUz hIfhYJ d-flex justify-content-between"
  >
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="x"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={10}
      />
      <label>
        Field size: X
      </label>
    </div>
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="y"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={10}
      />
      <label>
        Field size: Y
      </label>
    </div>
  </div>
  <div
    className="sc-gsTCUz hIfhYJ d-flex justify-content-between"
  >
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="ships4n"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={1}
      />
      <label>
        4x ships count
      </label>
    </div>
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="ships3n"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={2}
      />
      <label>
        3x ships count
      </label>
    </div>
  </div>
  <div
    className="sc-gsTCUz hIfhYJ d-flex justify-content-between"
  >
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="ships2n"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={3}
      />
      <label>
        2x ships count
      </label>
    </div>
    <div
      className="sc-dlfnbm form-floating"
    >
      <input
        className="sc-hKgILt form-control undefined"
        name="ships1n"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={4}
      />
      <label>
        1x ships count
      </label>
    </div>
  </div>
  <div
    className="sc-gsTCUz hIfhYJ d-flex justify-content-evenly"
  >
    <button
      className="btn btn-secondary"
      onClick={[Function]}
    >
      Back
    </button>
    <button
      className="btn btn-primary"
      onClick={[Function]}
    >
      Create lobby
    </button>
  </div>
</div>
`;

exports[`App snapshots Check game 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    Fight
  </h1>
  <div
    className="sc-jSgupP d-flex"
  >
    <table
      className="sc-gKsewC sc-iBPRYJ hPxzGb twbZX table table-bordered"
    >
      <thead>
        <tr>
          <td />
          <td>
            A
          </td>
          <td>
            B
          </td>
          <td>
            C
          </td>
          <td>
            D
          </td>
          <td>
            E
          </td>
          <td>
            F
          </td>
          <td>
            G
          </td>
          <td>
            H
          </td>
          <td>
            I
          </td>
          <td>
            J
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            3
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            4
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            5
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            6
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            7
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            8
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            9
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
        <tr>
          <td>
            10
          </td>
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
          <td
            className=""
            onClick={[Function]}
          />
        </tr>
      </tbody>
    </table>
    <table
      className="sc-gKsewC hPxzGb table table-bordered"
    >
      <thead>
        <tr>
          <td />
          <td>
            A
          </td>
          <td>
            B
          </td>
          <td>
            C
          </td>
          <td>
            D
          </td>
          <td>
            E
          </td>
          <td>
            F
          </td>
          <td>
            G
          </td>
          <td>
            H
          </td>
          <td>
            I
          </td>
          <td>
            J
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            3
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            4
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            5
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            6
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            7
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            8
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            9
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
        <tr>
          <td>
            10
          </td>
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
          <td
            className=""
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`App snapshots Check game over 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    You are loose
  </h1>
  <button
    className="sc-eCssSg btn btn-primary"
    onClick={[Function]}
  >
    To main menu
  </button>
</div>
`;

exports[`App snapshots Check game win 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    You are win
  </h1>
  <button
    className="sc-eCssSg btn btn-primary"
    onClick={[Function]}
  >
    To main menu
  </button>
</div>
`;

exports[`App snapshots Check lobby list 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    Lobby list
  </h1>
  <table
    className="sc-fubCfw table table-striped table-hover"
  >
    <thead>
      <tr>
        <td />
        <td>
          Lobby name
        </td>
        <td>
          Field size
        </td>
        <td>
          Ships 4x/3x/2x/1x
        </td>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`App snapshots Check main page 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    Battleship
  </h1>
  <div>
    <button
      className="sc-pFZIQ fwORzk btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Search opponent
    </button>
    <button
      className="sc-pFZIQ sc-jrAGrp fwORzk btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Create lobby
    </button>
  </div>
</div>
`;

exports[`App snapshots Check set ships 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    Set ships
  </h1>
  <div
    className="d-flex"
  >
    <div>
      <table
        className="sc-kEjbxe jokKlb table table-bordered"
      >
        <thead>
          <tr>
            <td />
            <td>
              A
            </td>
            <td>
              B
            </td>
            <td>
              C
            </td>
            <td>
              D
            </td>
            <td>
              E
            </td>
            <td>
              F
            </td>
            <td>
              G
            </td>
            <td>
              H
            </td>
            <td>
              I
            </td>
            <td>
              J
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              1
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              2
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              3
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              4
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              5
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              6
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              7
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              8
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              9
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
          <tr>
            <td>
              10
            </td>
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
            <td
              className=""
              onClick={[Function]}
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="sc-iqHYGH erCuwz"
    >
      <div
        className="sc-crrsfI hCyPpV d-flex"
      >
        <div
          className="sc-hBEYos gFwwHG d-flex undefined"
        >
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
        </div>
        <span>
           
          x
          1
        </span>
      </div>
      <div
        className="sc-crrsfI hCyPpV d-flex"
      >
        <div
          className="sc-hBEYos gFwwHG d-flex undefined"
        >
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
        </div>
        <span>
           
          x
          1
        </span>
      </div>
      <div
        className="sc-crrsfI hCyPpV d-flex"
      >
        <div
          className="sc-hBEYos gFwwHG d-flex undefined"
        >
          <div
            className="sc-kstrdz cLMXsX"
          />
          <div
            className="sc-kstrdz cLMXsX"
          />
        </div>
        <span>
           
          x
          1
        </span>
      </div>
      <div
        className="sc-crrsfI hCyPpV d-flex"
      >
        <div
          className="sc-hBEYos gFwwHG d-flex undefined"
        >
          <div
            className="sc-kstrdz cLMXsX"
          />
        </div>
        <span>
           
          x
          1
        </span>
      </div>
      <div
        className="sc-dQppl dijAIy"
      />
    </div>
  </div>
</div>
`;

exports[`App snapshots Check wait connect 1`] = `
<div
  className="sc-fodVxV gZZuTH"
>
  <h1
    className="sc-bdfBwQ display-3"
  >
    Wait connect
  </h1>
  <button
    className="btn btn-warning"
    onClick={[Function]}
  >
    Discard
  </button>
</div>
`;
